2007-07-11  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala, gobject/valacodegenerator.vala:
	  support element access for strings
	* tests/test-019.vala, tests/test-019.out: test element access for
	  strings

	Fixes bug 443523

2007-07-11  Jürg Billeter  <j@bitron.ch>

	* ccode/valaccodefragment.vala, ccode/valaccodenode.vala,
	  ccode/valaccodeoncesection.vala, gobject/valacodegenerator.vala,
	  gobject/valacodegeneratorsourcefile.vala: fix order in C header file
	* tests/test-014.vala, tests/test-014.out: test public delegate

	Fixes bug 442703

2007-07-11  Jürg Billeter  <j@bitron.ch>

	* vala/valaforeachstatement.vala: call visit_end_full_expression for
	  collection expression
	* gobject/valacodegenerator.vala, gobject/valacodegeneratormethod.vala:
	  return array length if appropriate
	* tests/test-032.vala, tests/test-032.out: test array as return value
	* tests/Makefile.am: update

	Fixes bug 453676

2007-07-11  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala: any reference or array type or pointer
	  type can be cast to a generic pointer

2007-07-11  Jürg Billeter  <j@bitron.ch>

	* vapi/libxml-2.0.vala: expand libxml2 bindings,
	  patch by Michael Lawrence, fixes bug 452016

2007-07-11  Jürg Billeter  <j@bitron.ch>

	* vala/valainterfacewriter.vala: fix writing type arguments of formal
	  parameters
	* vapi/atk.vala, vapi/gdk-2.0.vala, vapi/gtk+-2.0.vala, vapi/pango.vala:
	  regenerated to use out instead of ref parameters

2007-07-10  Jürg Billeter  <j@bitron.ch>

	* vala/valacodecontext.vala, gobject/valaccodecompiler.vala,
	  gobject/valacodegeneratormethod.vala, compiler/valacompiler.vala:
	  add --thread option to enable multithreading support

2007-07-10  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodecompiler.vala: always use gobject-2.0

2007-07-10  Jürg Billeter  <j@bitron.ch>

	* vapi/hal.vala: fix typo

2007-07-09  Jürg Billeter  <j@bitron.ch>

	* configure.ac: Post-release version bump
